test/type-check/should-fail/add.bril
main{
    a: int  = const 1;
    b: bool = const true;
    c: int = add a b;
    print c;
}
